tests/NormalTests/paczka1/fuzzy1/69151724.err
Error in line 24: ZFUpLsZsI A203 r,1
Error in line 32: cVmz S482 52,5
Error in line 38: S482 S482 60,8
